<resources>
<<<<<<< HEAD
  <string name="app_name">INDODAXDEMO</string>
  <string name="indodaxdemo">IndodaxDemo</string>
  <string name="create_new_account">Create New Account</string>
  <string name="full_name">Full Name</string>
  <string name="e_mail">E-mail</string>
  <string name="password">Password</string>
  <string name="phone_number">Phone Number</string>
  <string name="sign_up">Sign Up</string>
  <string name="have_an_account_sign_in">Have an Account ? Sign In</string>
  <string name="don_t_have_an_account_sign_up">Do not have an account ? Sign Up</string>
  <string name="login">Login</string>
  <string name="sign_in">Sign In</string>
  <string name="username">Username</string>
  <string name="logout">Logout</string>
  <string name="welcome_to">Welcome To</string>
  <string name="title_activity_profile">MainActivity</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="total_asset">Total Asset</string>
  <string name="rp_0">Rp0,00</string>
  <string name="reset">Reset</string>
=======
    <string name="app_name">indodaxdemo</string>
    <string name="indodaxdemo">IndodaxDemo</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_sign_in">Have an Account ? Sign In</string>
    <string name="don_t_have_an_account_sign_up">Do not have an account ? Sign Up</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="welcome_to">Welcome To</string>
    <string name="title_activity_profile">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_account">Edit Account</string>
    <string name="update">Update</string>
>>>>>>> a3a2db7176165d7e85b6783f3485c39c187bdb70
</resources>