<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:id="@+id/swipe_refresh_home">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@android:color/white"
      android:orientation="vertical">

        <TextView
          android:id="@+id/total_asset_text_view"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/total_asset"
          android:gravity="center"
          android:textSize="18sp"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="8dp" />

        <TextView
          android:id="@+id/total_asset_value"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/rp_0"
          android:gravity="center"
          android:textSize="21sp"
          android:textStyle="bold" />

        <Button
          android:id="@+id/reset_aset_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="5dp"
          android:layout_marginBottom="20dp"
          android:backgroundTint="@color/button_background_color"
          android:text="@string/reset"
          android:textAllCaps="true"
          android:gravity="center" />

        <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/smooth_grey">

            <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="6dp"
              android:background="@drawable/textlines">

                <androidx.recyclerview.widget.RecyclerView
                  android:id="@+id/recycler_view_coin_summary"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  tools:listitem="@layout/adapter_coin_summary"
                  tools:ignore="MissingConstraints" />

                <ProgressBar
                  android:id="@+id/progress_bar_coin_summary"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>